syntax = "proto3";

option go_package = "internal/beacon/proto";

package proto;

service UniqueValueService {
  rpc StoreUniqueValue(StoreUniqueValueRequest)
      returns (StoreUniqueValueResponse);
}

message StoreUniqueValueRequest {
  string store = 1;
  string value = 2;
}

message StoreUniqueValueResponse {
  bool succeeded = 1;
}
